<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner"
        android:elevation="10dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/remove_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01"
            app:layout_constraintWidth_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/curreny_text"
            style="@style/customtextviewbold"
            android:text="@string/currency"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/course_sb_text"
            style="@style/customtextviewbold"
            android:text="@string/kurs_sb"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toRightOf="@id/vertical_guideline"
            app:layout_constraintRight_toLeftOf="@id/buying_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/buying_text"
            style="@style/customtextviewbold"
            android:text="@string/buying"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toRightOf="@id/course_sb_text"
            app:layout_constraintRight_toLeftOf="@id/selling_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/selling_text"
            style="@style/customtextviewbold"
            android:text="@string/selling"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toRightOf="@id/buying_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_percent="0.2" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/bottom_img"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <ImageView
            android:id="@+id/bottom_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_up_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview"
            app:layout_constraintVertical_bias="0.99"
            app:layout_constraintWidth_percent="0.12" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>