<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cardview_1_title"
        style="@style/customtextviewbold"
        android:text="@string/convert_from_text"
        app:layout_constraintBottom_toTopOf="@id/cardview_1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="@id/cardview_1"
        app:layout_constraintRight_toRightOf="@id/cardview_1" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_1"
        style="@style/customcardview"
        app:layout_constraintBottom_toTopOf="@id/cardview_2"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.95">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cardview_1_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="10dp"
                android:src="@drawable/ic_visa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_1_name"
                style="@style/customtextviewnormal"
                android:layout_width="0dp"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@id/cardview_1_balance"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@id/cardview_1_logo"
                app:layout_constraintTop_toTopOf="@id/cardview_1_logo"
                app:layout_constraintWidth_percent="0.5"
                tools:text="start" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_1_balance"
                style="@style/customtextviewbold"
                android:layout_width="0dp"
                app:layout_constraintBottom_toBottomOf="@id/cardview_1_logo"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@id/cardview_1_logo"
                app:layout_constraintTop_toBottomOf="@id/cardview_1_name"
                app:layout_constraintWidth_percent="0.45"
                tools:text="426 usd" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_1_number"
                style="@style/customtextviewnormal"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@id/cardview_1_name"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintRight_toLeftOf="@id/cardview_1_expand_img"
                app:layout_constraintTop_toTopOf="@id/cardview_1_name"
                app:layout_constraintWidth_percent="0.15"
                tools:text="****2345" />

            <ImageView
                android:id="@+id/cardview_1_expand_img"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_expand"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintHorizontal_bias="0.97"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.08" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cardview_2_title"
        style="@style/customtextviewbold"
        android:text="@string/convert_into_text"
        app:layout_constraintBottom_toTopOf="@id/cardview_2"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintLeft_toLeftOf="@id/cardview_1_title"
        app:layout_constraintWidth_percent="0.5" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_2"
        style="@style/customcardview"
        app:layout_constraintBottom_toTopOf="@id/cardview_3"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_1"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintWidth_percent="0.95">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cardview_2_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="10dp"
                android:src="@drawable/uzkard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_2_name"
                style="@style/customtextviewnormal"
                android:layout_width="0dp"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@id/cardview_2_balance"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@id/cardview_2_logo"
                app:layout_constraintTop_toTopOf="@id/cardview_2_logo"
                app:layout_constraintWidth_percent="0.5"
                tools:text="card name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_2_balance"
                style="@style/customtextviewbold"
                android:layout_width="0dp"
                tools:text="95 000 000 uzs"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@id/cardview_2_logo"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@id/cardview_2_logo"
                app:layout_constraintTop_toBottomOf="@id/cardview_2_name"
                app:layout_constraintWidth_percent="0.45" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardview_2_number"
                style="@style/customtextviewnormal"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@id/cardview_2_name"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintRight_toLeftOf="@id/cardview_2_expand_img"
                app:layout_constraintTop_toTopOf="@id/cardview_2_name"
                app:layout_constraintWidth_percent="0.15"
                tools:text="****2345" />

            <ImageView
                android:id="@+id/cardview_2_expand_img"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_expand"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintHorizontal_bias="0.97"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.08" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cardview_3_title"
        style="@style/customtextviewbold"
        android:text="ПРОДАЖА: 1 USD = 10522.00"
        app:layout_constraintBottom_toTopOf="@id/cardview_3"
        app:layout_constraintLeft_toLeftOf="@id/cardview_1_title"
        tools:text="ПРОДАЖА: 1 USD = 10570.0 UZS" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_3"
        style="@style/customcardview"
        app:layout_constraintBottom_toTopOf="@id/convert_button"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_2"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintWidth_percent="0.95">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/uzs_text"
                style="@style/customtextviewnormal"
                android:text="@string/uzs_text"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@id/middle_line"
                app:layout_constraintLeft_toLeftOf="@id/middle_line"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/converted_amount"
                style="@style/customtextviewnormal"
                android:text="@string/_0_text"
                app:layout_constraintBottom_toTopOf="@id/middle_line"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@id/uzs_text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/middle_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#80959595"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.9" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/usd_text"
                style="@style/customtextviewnormal"
                android:text="@string/usd_text"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/middle_line"
                app:layout_constraintTop_toBottomOf="@id/middle_line" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/enter_sum_text"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/converted_amount"
                app:layout_constraintRight_toRightOf="@id/middle_line"
                app:layout_constraintTop_toBottomOf="@id/middle_line" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/convert_button"
        style="@style/green_button"
        android:enabled="false"
        android:text="@string/convert"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_3"
        app:layout_constraintWidth_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/exchange_cardview"
        style="@style/customcardview"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@id/cardview_2"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toLeftOf="@id/cardview_1"
        app:layout_constraintRight_toRightOf="@id/cardview_1"
        app:layout_constraintTop_toBottomOf="@id/cardview_1"
        app:layout_constraintWidth_percent="0.13">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_exchange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>